--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -1,7 +1,7 @@
 <h1>List New Shelter</h1>
 
 
-<%= form_tag "/shelters/new" do %>
+<%= form_tag "/shelters" do %>
   <%= text_field_tag :name %>
   <%= text_field_tag :address %>
   <%= text_field_tag :city %>
@@ -9,18 +9,3 @@
   <%= text_field_tag :zipcode %>
   <%= submit_tag "Create Shelter" %>
 <% end %>
-
-<%#form action="/shelters" method="post">
-  #<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <!-- <p>#Enter a new shelter: name</p>
-  <#input type='text' name='shelter[name]'/><br/>
-  <p>#Enter shelter street address:</p>
-  <#input type='text' name='shelter[address]'/><br/>
-  <p>#Enter shelter city:</p>
-  <#input type='text' name='shelter[city]'/><br/>
-  <p>Enter shelter state:</p>
-  <#input type='text' name='shelter[state]'/><br/>
-  <p>Enter shelter zipcode:</p>
-  <#input type='text' name='shelter[zipcode]'/><br/>
-  <input type='submit'/>
-</form> -->
