Add completion of user story 5

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -3,3 +3,5 @@
   <h2><%= @shelter.city %></h2>
   <h2><%= @shelter.state %></h2>
   <h2><%= @shelter.zipcode %></h2>
+
+<%= link_to "Update Shelter", "/shelters/#{@shelter.id}/edit" %>
