Add completion of user story 6

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -5,3 +5,4 @@
   <h2><%= @shelter.zipcode %></h2>
 
 <%= link_to "Update Shelter", "/shelters/#{@shelter.id}/edit" %>
+<%= link_to "Delete Shelter", "/shelters/#{@shelter.id}", method: :delete %>
