Add model testing and creation of foreign key

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -5,5 +5,5 @@
   <h2><%= pet.name %></h2>
   <h2><%= pet.approximate_age %></h2>
   <h2><%= pet.sex %></h2>
-  <h2><%= pet.current_shelter_id %></h2>
+  <h2><%= pet.shelter.name %></h2>
 <% end %>
