--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Pets</h1>
 
 <% @pets.each do |pet| %>
-  <h2><%= pet.image %></h2>
+<%= image_tag(pet.image) %>
   <h2><%= pet.name %></h2>
   <h2><%= pet.approximate_age %></h2>
   <h2><%= pet.sex %></h2>
