--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -5,7 +5,8 @@
   <h2><%= pet.name %></h2>
   <h2><%= pet.approximate_age %></h2>
   <h2><%= pet.sex %></h2>
-  <h2><%= pet.shelter.name %></h2>
+  <h2><%= link_to "#{pet.shelter.name}","/shelters/#{pet.shelter_id}" %></h2>
+
   <%= link_to "Update Pet", {:controller => "pets", :action => "edit", :pet_id => pet.id} %>
   <%= link_to "Delete Pet", "/pets/#{pet.id}", method: :delete %>
 <% end %>
