--- a/app/views/pets/index_specific.html.erb
+++ b/app/views/pets/index_specific.html.erb
@@ -1,4 +1,5 @@
-<h1><%= @current_shelter.name %></h1>
+<h1><%= link_to "#{@current_shelter.name}","/shelters/#{@current_shelter_id}" %></h1>
+
 <% @pets.each do |pet| %>
 
 <% if "#{pet.shelter.id}" == @current_shelter_id %>
