Complete user story 18

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,8 +1,8 @@
 <h1>All Pets</h1>
 
 <% @pets.each do |pet| %>
-<%= image_tag(pet.image) %>
-  <h2><%= pet.name %></h2>
+  <%= image_tag(pet.image) %>
+  <h2><%= link_to "#{pet.name}","/pets/#{pet.id}" %></h2>
   <h2><%= pet.approximate_age %></h2>
   <h2><%= pet.sex %></h2>
   <h2><%= link_to "#{pet.shelter.name}","/shelters/#{pet.shelter_id}" %></h2>
