--- a/app/views/shelters/edit.html.erb
+++ b/app/views/shelters/edit.html.erb
@@ -1,3 +1,5 @@
+<h3><%= link_to "Click here to see all pets","/pets" %></h3>
+
 <h1>Edit Shelter</h1>
 
 <%= form_tag "/shelters/#{@shelter_id}", method: :put do %>
