--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,3 +1,5 @@
+<h3><%= link_to "Click here to see all pets","/pets" %></h3>
+
 <h1>Update Pet Info</h1>
 <%= form_tag "/pets/#{@pet_id}", method: :post do %>
 <%= text_field_tag :image %>
