--- a/app/views/pets/index_specific.html.erb
+++ b/app/views/pets/index_specific.html.erb
@@ -1,3 +1,5 @@
+<h3><%= link_to "Click here to see all pets","/pets" %></h3>
+
 <h1><%= link_to "#{@current_shelter.name}","/shelters/#{@current_shelter_id}" %></h1>
 
 <% @pets.each do |pet| %>
