--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -1,3 +1,5 @@
+  <h3><%= link_to "Click here to see all pets","/pets" %></h3>
+
   <h1><%= @shelter.name %></h1>
   <h2><%= @shelter.address %></h2>
   <h2><%= @shelter.city %></h2>
