--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,4 +1,5 @@
 <h3><%= link_to "Click here to see all pets","/pets" %></h3>
+<h3><%= link_to "Click here to see all shelters","/shelters" %></h3>
 
 <h1>Update Pet Info</h1>
 <%= form_tag "/pets/#{@pet_id}", method: :post do %>
