--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,4 +1,5 @@
 <h3><%= link_to "Click here to see all pets","/pets" %></h3>
+<h3><%= link_to "Click here to see all shelters","/shelters" %></h3>
 
 <h1>All Shelters</h1>
 
