--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -6,10 +6,10 @@
 
 
 <%= form_tag "/shelters" do %>
-  <%= text_field_tag :name %>
-  <%= text_field_tag :address %>
-  <%= text_field_tag :city %>
-  <%= text_field_tag :state %>
-  <%= text_field_tag :zipcode %>
+  <%= text_field_tag :name, "Name of Shelter" %>
+  <%= text_field_tag :address, "Address" %>
+  <%= text_field_tag :city, "City"%>
+  <%= text_field_tag :state, "State" %>
+  <%= text_field_tag :zipcode, "Zipcode" %>
   <%= submit_tag "Create Shelter" %>
 <% end %>
